Setted up options menu

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Etch A Sketch</title>
 </head>
 <body>
+    <div>Etch-A-Sketch</div>
+    <div class="options">
+        <h5>Draw:</h5>
+        <button>ON</button>
+    </div>
     <div class="col">
      
     </div>
