Added Options Bar

--- a/index.html
+++ b/index.html
@@ -7,10 +7,21 @@
     <title>Etch A Sketch</title>
 </head>
 <body>
-    <div>Etch-A-Sketch</div>
-    <div class="options">
-        <h5>Draw:</h5>
-        <button>ON</button>
+    <div id="heading">Etch-A-Sketch</div>
+    <h5>Double Click to start drawing. Double Click to stop</h5>
+    <div class="options-Bar">
+        <div class="options">
+            <h5 class="options-text">Draw:</h5>
+            <button id="drawStatus">Off</button>
+        </div>
+        <div class="options">
+            <h5 class="options-text">Color:</h5>
+            <button>Choose</button>
+        </div>
+        <div class="options">
+            <h5></h5>
+            <button id="clear">Clear Screen</button>
+        </div>
     </div>
     <div class="col">
      
