Fixed alignment of bar

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="heading">Etch-A-Sketch</div>
     <h5>Double Click to start drawing. Double Click to stop</h5>
-    <div class="options-Bar">
+    <div class="optionsBar">
         <div class="options">
             <h5 class="options-text">Draw:</h5>
             <button id="drawStatus">Off</button>
